# path-finder

./: CMakeLists.txt  CMakeUserPresets.json  readme.txt
lab2/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  resources.qrc
lab2/engine/binary/: BinaryImageInfo.cpp  BinaryImageInfo.h
lab2/engine/filters/: BinaryNoiseReduction.cpp  BinaryNoiseReduction.h  ContrastStretch.cpp  ContrastStretch.h  GreyWorldFilter.cpp  GreyWorldFilter.h  ImageProcessor.cpp  ImageProcessor.h  KernelCreator.cpp  KernelCreator.h  MedianFilter.cpp  MedianFilter.h  structs.h
lab2/engine/generators/: BinaryGenerator.cpp  BinaryGenerator.h  GaussianNoise.cpp  GaussianNoise.h
lab2/engine/painter/: ImagePainter.cpp  ImagePainter.h
lab2/engine/searcher/: ArrowSearcher.cpp  ArrowSearcher.h  PathFinder.cpp  PathFinder.h
lab2/ui/: CardWidget.cpp  CardWidget.h  EngineStepRunner.cpp  EngineStepRunner.h  GalleryView.cpp  GalleryView.h  ImageInfo.h  ProcessResult.h  ResultViewer.cpp  ResultViewer.h  StepProcessViewer.cpp  StepProcessViewer.h
